--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Julianna Rodríguez</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section>
@@ -16,7 +17,7 @@
 
     <section class="main banner">
       <h1>Hi, I’M Julianna a UX Designer
-    Based in Brooklyn, New York.</h1>
+    Based in Brooklyn, New York </h1>
     <<img src="" alt="">
     </section>
     <section class="PROJECTS">
