--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
       </nav>
     </section>
 
-    <section class="main banner">
+    <section class="main-banner">
       <h1>Hi, I’M Julianna a UX Designer
     Based in Brooklyn, New York </h1>
     <<img src="" alt="">
@@ -23,13 +23,15 @@
     <section class="PROJECTS">
       <h2>PROJECTS</h2>
     </section>
-    <section class="billow project">
+    <section class="billow-project">
       <h3>Billow</h3>
       <p>UX Design, Visual design, user research & testing</p>
+      <p>View Case Study</p>
     </section>
-    <section class="busybus project">
+    <section class="busybus-project">
       <h3>BusyBus</h3>
       <p>UX Design, Visual design, user research & testing</p>
+      <p>View Project</p>
     </section>
     <section>
       <footer>
