--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Julianna Rodríguez</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
+    <div class= "container">
     <section>
-      <nav>
-        <div class="topnav">
+      <nav class="topnav">
       <a class="active" href="#work">Work</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
@@ -20,26 +22,29 @@
     Based in Brooklyn, New York </h1>
     <<img src="" alt="">
     </section>
-    <section class="PROJECTS">
+
+    <section class="projects">
       <h2>PROJECTS</h2>
     </section>
+
     <section class="billow-project">
       <h3>Billow</h3>
       <p>UX Design, Visual design, user research & testing</p>
       <p>View Case Study</p>
     </section>
+
     <section class="busybus-project">
       <h3>BusyBus</h3>
       <p>UX Design, Visual design, user research & testing</p>
       <p>View Project</p>
     </section>
-    <section>
+    <section class="footer">
       <footer>
-
+    <a href="#contact">CONTACT</a>
+      <!-- Copyright -->
+    <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
     </section>
-
-    <!-- Copyright -->
-      <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+</div>
   </body>
 </html>
