--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
     <title>Julianna Rodríguez</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -20,7 +22,8 @@
     <section class="main-banner">
       <h1>Hi, I’M Julianna a UX Designer
     Based in Brooklyn, New York </h1>
-    <<img src="" alt="">
+    <font font-family
+    <img src="" alt="">
     </section>
 
     <section class="projects">
@@ -40,6 +43,7 @@
     </section>
     <section class="footer">
       <footer>
+        <hr>
     <a href="#contact">CONTACT</a>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
