--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
   <body>
     <div class= "container">
     <section>
+      <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
       <nav class="topnav">
       <a class="active" href="#work">Work</a>
       <a href="#about">About</a>
