--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julianna Rodríguez</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -21,10 +22,9 @@
     </section>
 
     <section class="main-banner">
-      <h1>Hi, I’M Julianna a UX Designer
-    Based in Brooklyn, New York </h1>
-    <font font-family
-    <img src="" alt="">
+      <img class="icon" src="images/bauhaus graphic.png" alt="bauhaus icon" align="right">
+      <h1> Hi, I’M Julianna a UX Designer
+    <br> Based in Brooklyn, New York </h1>
     </section>
 
     <section class="projects">
@@ -32,9 +32,12 @@
     </section>
 
     <section class="billow-project">
+      <aside>
+      <i class= "billow-image"><img src=images/billow-image.png alt="billow App"></i>
       <h3>Billow</h3>
-      <p>UX Design, Visual design, user research & testing</p>
+      <p>UX Design, Visual design, user research & testing<p>
       <p>View Case Study</p>
+    </aside>
     </section>
 
     <section class="busybus-project">
