--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,7 @@
 
     <section class="busybus-project">
       <h3>BusyBus</h3>
+      <i class= "billow-image"><img src=images/Iphonex busybus 1.png alt="busybus app"></i>
       <p>UX Design, Visual design, user research & testing</p>
       <p>View Project</p>
     </section>
