--- a/Index.html
+++ b/Index.html
@@ -41,11 +41,14 @@
     </section>
 
     <section class="busybus-project">
+      <aside>
+      <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
       <h3>BusyBus</h3>
-      <i class= "billow-image"><img src=images/Iphonex busybus 1.png alt="busybus app"></i>
       <p>UX Design, Visual design, user research & testing</p>
       <p>View Project</p>
+    </aside>
     </section>
+
     <section class="footer">
       <footer>
         <hr>
