--- a/Billow.html
+++ b/Billow.html
@@ -21,16 +21,55 @@
       <a href="#contact">Contact</a>
       </nav>
     </section>
+
     <section class="billow-intro">
       <h1> Billow </h1>
       <p>
+      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" ></a>
       <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research
       <br><strong>Tools:</strong> Figma, Invision, USabilityHub
       <br><strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
       <br>User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
       <br>Design
       <br>View Prototype
-    </p>
+    <hr class="section-divider">
+    </section>
+
+    <section>
+      <h2>Problem</h2>
+      <p>Current cloud storage services don’t offer a seamless or intuitive user
+      <br> experience. Non-tech users are not considered, which results in hesitation
+      <br> in using cloud storage services. Cloud storage solutions fail to reach
+      <br> their full potential by not looking deeper into their capabilities and
+      <br> exploring features like collaboration, link storage, organization, and
+      <br> customization that optimize the collaborative process.
+      <hr class="section-divider">
+    </section>
+    <section>
+      <h2>Solution</h2>
+      <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
+      <p>Billow is a cloud storage service that offers users the ability to
+      <br> customize content organization by providing an initial folder setup
+        <br> based on their needs as individuals, freelancers, or business teams. Users
+        <br> are also able to create content like documents, sheets and notes, organize
+        <br> content, uploading files as well as sharing and collaborating in real-time. These
+        <br> solutions reduce the drag for users of having to figure out how to organize
+        <br> their files and content as well as reducing the amount of external communication
+        <br> with real-time collaboration tools.
+        <hr class="section-divider">
+    </section>
+
+    <section>
+      <h2>Research</h2>
+      <h3>User Survey</h3>
+      <p>The solutions I came up with are based on the insights gathered on the
+      <br> user surveys where I learned if participants use or don’t use cloud storage,
+      <br> why to use it, what their frustrations, which features they prioritize
+      <br> are and what would motivate them to use it.
+      <br>
+      <br>The survey was completed by 19 participants.
+      <br>View results
+      <hr class="section-divider">
     </section>
 
     <section class="footer">
