case study updates

--- a/Billow.html
+++ b/Billow.html
@@ -62,6 +62,7 @@
     <section>
       <h2>Research</h2>
       <h3>User Survey</h3>
+      <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
       <p>The solutions I came up with are based on the insights gathered on the
       <br> user surveys where I learned if participants use or don’t use cloud storage,
       <br> why to use it, what their frustrations, which features they prioritize
@@ -71,8 +72,120 @@
       <br>View results
       <hr class="section-divider">
     </section>
+    <section>
+      <h2>User Personas</h2>
+      <p>Based on the user surveys, I was able to identify two types of users;
+      <br>the non-user who’s hesitant about using cloud storage because it seems
+      <br>overwhelming and the active user who is interested in trying out a new
+      <br>service that meets her needs.
+      <br>
+      <img class="user-persona" src="images/mariap.png" alt="Maria User Persona" ></a>
+      <p><strong>Maria P.</strong>
+      <br> Ux Designer
+      <br> Age: 27/Location: Seattle, WA
+      <br> a María is a UX designer based in Seattle,
+      <br>Washington. She splits her time between working
+      <br>at a design studio full time and developing her
+      <br>personal project which is related to altering
+      <br>clothing and sustainability.As a UX enthusiast,
+      <br>she is always open to trying out new products
+      <br>especially if they will meet her needs.
+      <br>
+      <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
+      <p><strong>Luis R.</strong>
+      <br>Ux Designer
+      <br>Age: 31/Location: Brooklyn, NY
+      <br>Luis has been a copywriter for 6+ years and is
+      <br>currently based in New York. Outside of work,
+      <br>he’s a music enthusiasts and enjoys going to
+      <br>concerts frequently. Luis is a creature of habits
+      <br>and can be a bit hesitant to using new services
+      <br>like cloud storage but he is open to trying a
+      <br>service out if it’s user friendly and easy to
+      <br>navigate.
+      <hr class="section-divider">
+    </section>
+    <section>
+      <h2>Information Architecture</h2>
+      <h3>User Flows & User Stories </h3>
+      <p>For the user stories, I focused on what survey participants and personas
+      <br>prioritized. I compiled a list of high and medium priorities to reach
+      <br>the minimum viable product. Based on the user stories, I created user
+      <br>flows to show how users will complete these tasks.
+    <br>
+  <table>
+  <tr>
+  <th>User Type</th>
+  <th>Action</th>
+  <th>Priority</th>
+  </tr>
+  <tr>
+  <td>As a new user</td>
+  <td>Choose initial Folder Organization</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>As a new user</td>
+  <td>Choose membership type</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>All users</td>
+  <td>Upload content (images,pdfs, documents)</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>All users</td>
+  <td>Share files with others</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>All users</td>
+  <td>Collaborate with others in real time on documents, spreadsheets and notes</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>All users</td>
+  <td>Share folders with others</td>
+  <td>High</td>
+  </tr>
+  <tr>
+  <td>All users</td>
+  <td>Create documents</td>
+  <td>Medium</td>
+  </tr>
+  <tr>
+  <td>As a new user</td>
+  <td>Sign up</td>
+  <td>Low</td>
+  </tr>
+  <tr>
+  <td>As a returning user</td>
+  <td>Sign in</td>
+  <td>low</td>
+  </tr>
+</table>
+<img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
+<hr class="section-divider">
+    </section>
+    <section>
+      <h3>Competitive Analysis</h3>
+      <p>After completing this analysis, I realized that each of these apps has different advantages according
+         to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
+         all of these contents, google drive seems to be at the top. For users looking for more of a project management
+         tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
+         and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
+         Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
+         a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
+         file organization, collaboration and sharing options, security, and creating documents.
+
+    </section>
+
 
     <section class="footer">
+      <section>
+
+      </section>
       <footer>
         <hr>
     <a href="#contact">CONTACT</a>
