--- a/Billow.html
+++ b/Billow.html
@@ -31,7 +31,8 @@
       <br><strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
       <br>User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
       <br>Design
-      <br>View Prototype
+      <br>
+      <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
     <hr class="section-divider">
     </section>
 
@@ -91,6 +92,7 @@
       <br>she is always open to trying out new products
       <br>especially if they will meet her needs.
       <br>
+    </p>
       <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
       <p><strong>Luis R.</strong>
       <br>Ux Designer
@@ -103,6 +105,7 @@
       <br>like cloud storage but he is open to trying a
       <br>service out if it’s user friendly and easy to
       <br>navigate.
+    </p>
       <hr class="section-divider">
     </section>
     <section>
@@ -113,6 +116,7 @@
       <br>the minimum viable product. Based on the user stories, I created user
       <br>flows to show how users will complete these tasks.
     <br>
+  </p>
   <table>
   <tr>
   <th>User Type</th>
@@ -170,22 +174,121 @@
     </section>
     <section>
       <h3>Competitive Analysis</h3>
+      <img class="competitor" src="images/airtable.png" alt="Airtable Logo" ><
+      <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
+      <img class="competitor" src="images/evernote.png" alt="Evernote" >
       <p>After completing this analysis, I realized that each of these apps has different advantages according
-         to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
-         all of these contents, google drive seems to be at the top. For users looking for more of a project management
-         tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
-         and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
-         Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
-         a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
-         file organization, collaboration and sharing options, security, and creating documents.
-
+        <br> to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
+        <br> all of these contents, google drive seems to be at the top. For users looking for more of a project management
+        <br> tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
+        <br> and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
+        <br> Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
+        <br> a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
+        <br> file organization, collaboration and sharing options, security, and creating documents.
+      </p>
+        <hr class="section-divider">
     </section>
 
+  <section>
+    <h2>Wireframes</h2>
+    <img class="wireframes" src="images/wireframesketches.png" alt="Billow Wireframe Sketches" >
+    <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
+    <p>
+    <br> In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
+    <br> was clear that I needed to create a navigation that was easy to use for active users and non-users
+    <br> who might not be as tech-savvy or might feel overwhelmed with trying new systems.
+    <br><a href="">See Wireframes</a>
+  </p>
+  <h3>Usability Testing Round 1</h3>
+  <p>This is where the iteration process began, the following are the key takeaways from this round:</p>
+  <p>- Main CTA on homepage must be revised it should probably make reference to each of the
+  <br>  membership tiers or to “learn more” or even “sign up now” so that users are not confused
+  <br>  or resist signing up because they assume they will be charged</p>
+<p>- Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
+  <br>confusion</p>
+  <p>- Adding file/folder information on the dashboard (list view) as suggested by Manuel</p>
+  <hr class="section-divider">
+  </section>
+<section>
+  <h2>Designing the logo to evoke a feeling of Ease </h2>
+  <h3>The brand</h3>
+  <p>The brand name stands to represent a cloud but also how this service flows for users as far as it’s features of
+  <br>  creating, collaborating and sharing. The brand will be simple, light, somewhat playful and relatable. It will
+  <br>  also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
+  <br>  and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
+</p>
+  <img src="images/logosketches.png" alt="Billow Logo Sketches">
+  <img src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
+  <img src="images/billowbw.png" alt="Billow Black And White Logo">
+  <h3>Color Palette & Style Guide</h3>
+  <p>Based on the mood, the brand assets where created. The logo
+  <br>  icon is a reinterpretation of a cloud to continue to evoke that
+  <br>  feeling of calmness and simplicity. For the logo, I chose a gradient
+  <br>  using the lighter blue to light pink. This same gradient is used subtly
+  <br>  in some elements like icons and banners. The main accent color is the
+  <br>  darker blue which creates balance and harmony with the rest of the shades.</p>
+  <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
+  <br>
+  <img src="images/billow-brand.png" alt="Billow Brand">
+  <hr class="section-divider">
+</section>
+<section>
+  <h2>Hi-Fi MockuPS</h2>
+  <p>Following the branding, requirements and user flows,
+  <br>  wireframes transformed into hi-fi mockups focused on the
+  <br>  desktop experience. I considered user feedback and design
+  <br>  patterns as well to create an interface that was easy to use for
+  <br>  both tiers of user personas.
+</p>
+  <a href="#">See Mockups</a>
+  <h3>Usability testing 2.0</h3>
+  <p>After implementing the branding and initial changes based on the
+  <br>  first round of user testing and adding the branding, I focused this
+  <br>  test on similar tasks to make sure that users understand and are
+  <br>  able to use the app seamlessly.</p>
+  <p>Key takeaways:</p>
+  <p>- Change colors on bottom CTA on the homepage so they are easier
+  <br>to read</p>
+  <p>- Add icons or some text on the first enrollment screen so that users
+    <br> understand what choosing a free account versus a paid one entails.</p>
+  <p>- Adding the option to see “date created” on the list view of the
+    <br>dashboard</p>
+  <p>- Revise link sharing options on sharing screen
+</p>
+<img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
+<hr class="section-divider">
+</section>
+<section>
+  <h2>Preference testing</h2>
+  <p>After receiving feedback from user testing interviews, I ran a preference test to get
+  <br>even more clarity around specific items of the user interface.</p>
+  <img src="images/usertest1.png" alt="Billow User Test 1">
+  <img src="images/usertest2.png" alt="Billow User Test 2">
+  <img src="images/usertest3.png" alt="Billow User Test 3">
+  <hr class="section-divider">
+</section>
+<section>
+  <h2>The final result</h2>
+  <p>After a few rounds of revisions based on results from user testing, I finalized the cloud service.
+    <br>Minor tweaks were implemented in this round according to the user’s feedback.
+</p>
+<a href="https://invis.io/V5V9M8AMKZ9">Check out the prototype</a>
+  <h3>Takeaways</h3>
+  <p>Creating this application taught me the importance of testing and prioritizing user’s needs and feedback
+  <br> rather than relying on intuition. This lesson came across multiple times in the visual design phase,
+  <br>preference test and last round of user testing. Aside from user feedback, I also learned the importance
+  <br> of following guidelines and requirements in design as well as staying up to date when it comes to design
+  <br>patterns and best practices. In the design phase, I had some doubts as far as the possibility of creating
+  <br> a product that users could easily relate to and felt comfortable using. One of my biggest surprises was
+  <br>definitely that even those who are hesitant or not inclined to use new technologies were able to
+  <br>understand and use the app without major issues. Lastly, I learned the importance of focusing on key
+  <br>screens first to ensure that the user’s frustrations and key needs are prioritized.
+</p>
+  <h3></h3>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Back To Top</button>
+</section>
 
     <section class="footer">
-      <section>
-
-      </section>
       <footer>
         <hr>
     <a href="#contact">CONTACT</a>
