--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Julianna Rodríguez</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
@@ -15,9 +15,9 @@
   <section>
     <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
     <nav class="topnav">
-    <a class="active" href="#About">ABOUT</a>
-    <a href="#work">Work</a>
-    <a href="#contact">Contact</a>
+    <a href="#Work.html">Work</a>
+    <a class="active" href="#About.html">ABOUT</a>
+    <a href="#Contact.html">Contact</a>
     </nav>
   </section>
 
