--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
     <section>
       <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
       <nav class="topnav">
-      <a class="active" href="#work">Work</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+      <a class="active" href="#Index.html">Work</a>
+      <a href="#About.html">About</a>
+      <a href="#Contact.html">Contact</a>
       </nav>
     </section>
 
