page links update

--- a/About.html
+++ b/About.html
@@ -13,11 +13,11 @@
 <body>
   <div class= "container">
   <section>
-    <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
+  <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
     <nav class="topnav">
-    <a href="#Work.html">Work</a>
-    <a class="active" href="#About.html">ABOUT</a>
-    <a href="#Contact.html">Contact</a>
+    <a href="Index.html">Work</a>
+    <a class="active" href="About.html">ABOUT</a>
+    <a href="Contact.html">Contact</a>
     </nav>
   </section>
 
@@ -91,7 +91,7 @@
   <section class="footer">
     <footer>
       <hr>
-  <a href="#contact">CONTACT</a>
+  <a href="Contact.html">CONTACT</a>
     <!-- Copyright -->
   <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
     </footer>
