--- a/Billow.html
+++ b/Billow.html
@@ -13,12 +13,11 @@
     <div class= "container">
     <section>
       <p>
-      <a href="#index.html">
-      <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a></p>
+      <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a></p>
       <nav class="topnav">
-      <a href="#work">Work</a>
-      <a  class="active" href="#Billow">Billow</a>
-      <a href="#contact">Contact</a>
+      <a href="Index.html">Work</a>
+      <a href="About.html">About</a>
+      <a href="Contact.html">Contact</a>
       </nav>
     </section>
 
@@ -291,7 +290,7 @@
     <section class="footer">
       <footer>
         <hr>
-    <a href="#contact">CONTACT</a>
+    <a href="Contact.html">CONTACT</a>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
