--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
     <section>
       <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
       <nav class="topnav">
-      <a class="active" href="#Index.html">Work</a>
-      <a href="#About.html">About</a>
-      <a href="#Contact.html">Contact</a>
+      <a class="active" href="Index.html">Work</a>
+      <a href="About.html">About</a>
+      <a href="Contact.html">Contact</a>
       </nav>
     </section>
 
@@ -36,23 +36,21 @@
       <i class= "billow-image"><img src=images/billow-image.png alt="billow App"></i>
       <h3>Billow</h3>
       <p>UX Design, Visual design, user research & testing<p>
-      <p>View Case Study</p>
+        <a href="Billow.html">View Case Study</a>
     </aside>
     </section>
 
     <section class="busybus-project">
-      <aside>
       <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
       <h3>BusyBus</h3>
       <p>UX Design, Visual design, user research & testing</p>
-      <p>View Project</p>
-    </aside>
+      <a href="BusyBus.html">View Project</a>
     </section>
 
     <section class="footer">
       <footer>
         <hr>
-    <a href="#contact">CONTACT</a>
+    <a href="Contact.html">CONTACT</a>
       <!-- Copyright -->
     <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
