--- a/Contact.html
+++ b/Contact.html
@@ -12,11 +12,11 @@
 <body>
   <div class= "container">
   <section>
-    <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
+    <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
     <nav class="topnav">
-    <a class="active" href="#work">Work</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a class="active" href="Index.html">Work</a>
+    <a href="About.html">About</a>
+    <a href="Contact.html">Contact</a>
     </nav>
   </section>
   <section>
@@ -46,7 +46,7 @@
 <section class="footer">
   <footer>
     <hr>
-<a href="#contact">CONTACT</a>
+<a href="Contact.html">CONTACT</a>
   <!-- Copyright -->
 <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
 </div>
